--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
 
     <!-- Thumbnail image/gif -->
-    <meta property="og:image" content="https://media.tenor.com/view/caseoh-flashbang-renza-gif-3499959455427823758">
+    <meta property="og:image" content="https://github.com/IronJules2020/caseoh/blob/main/caseoh-flashbang-renza.gif">
     <meta property="og:type" content="video.other">
     
     <!-- Video Link -->
