--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
 
     <!-- Thumbnail image/gif -->
-    <meta property="og:image" content="https://github.com/IronJules2020/caseoh/blob/main/caseoh-flashbang-renza.gif">
+    <meta property="og:image" content="https://raw.github.com/IronJules2020/caseoh/blob/main/media/caseoh-flashbang-renza.gif">
     <meta property="og:type" content="video.other">
     
     <!-- Video Link -->
@@ -16,7 +16,7 @@
     <!-- Stole the memes from https://github.com/iwakkrg/iwakkrg.github.io -->
     
     <!-- Redirect -->
-    <meta http-equiv="refresh" content="0; url=https://www.youtube.com/@notexttospeech" />
+    <meta http-equiv="refresh" content="0; url=https://www.youtube.com/watch?v=m2vhyDqfjQg" />
   </head>
   <body>
   </body>
