--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:type" content="video.other">
     
     <!-- Video Link -->
-    <meta property="og:video:url" content="https://raw.githubusercontent.com/discowd-nitro/media-files/main/media/misery.mp4">
+    <meta property="og:video:url" content="https://github.com/IronJules2020/caseoh/raw/refs/heads/main/media/CaseOh%20-%20Burgers%20In%20The%20Back%20(Official%20Audio%20-%20Alternate%20Version)%20(1).mp3">
     <!-- If you want a seamless transition between your thumbnail size and video size, adjust these values to match your thumbnail resolution. -->
     <!-- However, it will be all wonky if your thumbnail is vertical and your video is horizontal. This works best with similar aspect ratios -->
     <meta property="og:video:height" content="202">
